--- a/Telegram/Resources/langs/rewrites/en.json
+++ b/Telegram/Resources/langs/rewrites/en.json
@@ -56,6 +56,10 @@
 	"ktg_net_speed_boost_big": "Big",
 	"ktg_settings_system": "System",
 	"ktg_settings_qt_scale": "Qt scaling engine",
+	"ktg_settings_file_dialog_type": "File chooser dialog",
+	"ktg_file_dialog_type_default": "Default",
+	"ktg_file_dialog_disabled_on_build": "Disabled on build time",
+	"ktg_file_dialog_disabled_by_option": "Disabled by option",
 	"ktg_settings_other": "Other",
 	"ktg_profile_copy_id": "Copy ID",
 	"ktg_profile_bot_id": "Bot ID",
