--- a/Telegram/Resources/langs/rewrites/en.json
+++ b/Telegram/Resources/langs/rewrites/en.json
@@ -12,7 +12,7 @@
 	"ktg_proxy_unsupported": "您的 Kotatogram 桌面版本不支持此代理類型或代理鏈接無效。請將 Kotatogram 桌面更新到最新版本。",
 	"ktg_update_telegram": "更新 Kotatogram",
 	"ktg_settings_auto_start": "系統啟動時啟動 Kotatogram",
-	"ktg_settings_add_sendto": "將 Kotatogram 放在“發送到”菜單中"，
+	"ktg_settings_add_sendto": "將 Kotatogram 放在“發送到”菜單中",
 	"ktg_theme_no_desktop": "抱歉，這個主題不包含 Kotatogram 桌面版。",
 	"ktg_download_path_default_radio": "系統«下載»中的 Kotatogram 文件夾",
 	"ktg_passcode_about": "設置本地密碼後，聊天列表頂部會出現一個鎖圖標。單擊它可鎖定應用程序。\n\n注意：如果您忘記了本地密碼，則需要重新登錄 Kotatogram 桌面。",
